<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">livelog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="latitud">Latitud</string>
    <string name="Minutes">Tid.Min</string>
    <string name="Distance">Sträcka</string>
    <string name="Speed">Hast</string>
    <string name="Longitud">Longitud</string>
    <string name="MaxSpeed">Max Hast</string>
    <string name="Tidigare_Pass">Pass</string>
	<string name="Duration">Duration</string>
    <string name="Pulse">Puls</string>
    <string name="AvgSpeed">Med.hast</string>
    <string name="SatteliteCount">Sats:</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
 
     
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="TimeDuration">elapsed</string>

    <string name="installningar">Inställningar</string>
    <string name="export">Exportera</string>

    <!--Inställningar för server-->
    <string name="inst_server_profile">Server Profile</string>
    <string name="inst_server_ip">Server Ip</string>
    <string name="inst_server_name_summary">Skriv in ServerIP</string>
    <string name="srvIp">IP:</string>

    <string name="inst_save_db_title">Spara data på telefonen</string>
    <string name="inst_save_db">Spara till lokal databas</string>
    <string name="inst_save_db_summary">För att kunna visa statistik på telefonen</string>
    
    <string name="inst_use_bt_title">Använd BlueTooth för PULS</string>
    <string name="inst_use_bt">Använd puls?</string>
    <string name="inst_use_bt_summary">Om puls skall kunna användas vid träningen</string>
    <string name="ble_not_supported">BLE lågenergi BlueTooth stöds inte!</string>
    
    <string name="inst_server_port">Anslutningsport</string>
    <string name="inst_server_port_summary">Ange port att ansluta socket på</string>
    
    <string name="inst_send_live_title">Skicka data i realtid</string>
    <string name="inst_send_live">Skicka livedata</string>
    <string name="inst_send_live_summary">Skicka kontinuerligt realtidsdata från telefonens GPS</string>
    
    
    
</resources>
