<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical"
    android:background="@color/bgColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txServerIp"

        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/srvIp"

        />

    <TextView
        android:id="@+id/txLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud"
        android:textColor="@color/txColor"
        android:textSize="@dimen/font_size_medium"

        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp" />


    <TextView
        android:id="@+id/txLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txLatitud"
        android:text="@string/Longitud"
        android:textSize="@dimen/font_size_medium"
        android:textColor="@color/txColor"
        android:layout_centerHorizontal="true"

         />

	<TextView
	    android:id="@+id/txSatteliteCount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@id/txServerIp"
	    android:text="@string/SatteliteCount"
	    android:textColor="@color/white"
        
	    />
    
    
    <TextView
        android:id="@+id/txMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"

        android:textColor="@color/txColor"
        android:textSize="@dimen/font_size_larger"
        android:text="@string/Minutes" />


    <TextView
        android:id="@+id/txDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txColor"
        android:textSize="@dimen/font_size_larger"
        android:layout_below="@id/txMinutes"
        android:text="@string/Distance" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txPulse"
        android:text="@string/Pulse"
        android:textColor="@color/txColor"
        android:textSize="@dimen/font_size_larger"
        android:layout_below="@id/txDistance"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_medium"
        android:text="@string/Speed"
        android:textColor="@color/bgColorGreen"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/txMinutes"
        android:layout_alignParentLeft="true"
         />

    <TextView
        android:id="@+id/txMaxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_medium"
        android:text="@string/MaxSpeed"
        android:textColor="@color/colorMx"
        android:layout_alignTop="@+id/txSpeed"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txAvgSpeed"
        android:text="@string/AvgSpeed"
        android:textColor="@color/colorMx"
        android:textSize="@dimen/font_size_medium"
        android:layout_alignTop="@+id/txMaxSpeed"
        android:layout_alignParentRight="true"
         />

    <ImageButton
        android:id="@+id/StartGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/startgps" />

    <ImageButton
        android:id="@+id/StopGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/StartGPS"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_connected" />

    <ImageButton
        android:id="@+id/AppExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/exit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txAvgSpeed"
        android:layout_alignEnd="@+id/txAvgSpeed" />



</RelativeLayout>